# floss

./: .gitignore  .gitlab-ci.yml  AGENTS.md  AI_POLICY.md  Agents.md  Cargo.toml  Directory.Build.props  Floss.slnx  README.md  SKILLS.md  chat_export_20260508_044228.md  counter.csv  flutter_rust_bridge.yaml  nuget.config  pubspec.yaml  run.sh  tree_output.txt
android/app/: build.gradle.kts
bench/GroupCompositeCheck/: GroupCompositeCheck.csproj  Program.cs
bench/PipelineBench/: PipelineBench.csproj  Program.cs
bench/traces/: live-floss.speedscope.json
crates/floss-app/: Cargo.toml  UI-REFERENCE.md
crates/floss-app/src/: app.rs  main.rs  state.rs  tablet.rs  tool_config.rs  tool_factory.rs  viewport.rs  widgets.rs
crates/floss-app/tests/: psd_load.rs
crates/floss-brush/: Cargo.toml
crates/floss-brush/src/: curve.rs  curve_option.rs  dynamics.rs  engine.rs  lib.rs  preset.rs  sensor.rs  stroke.rs  tip.rs  types.rs
crates/floss-compositor/: Cargo.toml
crates/floss-compositor/src/: cache.rs  compositor.rs  lib.rs  shaders.rs
crates/floss-core/: Cargo.toml
crates/floss-document/: Cargo.toml
crates/floss-file/: Cargo.toml
crates/floss-file/src/: floss_format.rs  lib.rs
crates/floss-input/: Cargo.toml
crates/floss-psd/: Cargo.toml
crates/floss-tool/: Cargo.toml
crates/floss-tool/src/: composite.rs  controller.rs  lib.rs  process.rs  tool.rs
crates/floss-ui/: Cargo.toml
docs/: ADDING_FEATURES.md  ARCHITECTURE.md  BRUSH_ENGINE.md  FILE_FORMATS.md  engine_architecture.md  fix_dab_cache_uaf.md  krita-brush.md  krita-floss-render-pipeline.md  krita-tile-cow-architecture.md  krita-tile-render-approach.md  phase3-render-direct.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
native/floss-composite/: Cargo.toml  build.rs  build.targets
native/floss-composite/include/: floss_composite.h
native/floss-composite/src/: blend.rs  ffi.rs  lib.rs
native/linux-x64/: libjson-c.so.5
notes/: adjustment-layer-perf.md  brush-alpha-and-size-mismatch.md  brush-antialiasing-levels.md  brush-input-settings-wiring.md  bundled-workspace-default.md  canvas-input-policy.md  clipped-layer-stroke-composite.md  compositor-freeze-deadlock.md  csp-brush-panel-adaptive.md  csp-smart-shape-reference.md  dark-brush-edge-fix.md  discord-rich-presence.md  display-mipmaps.md  dock-tabbed-model.md  docking-overhaul.md  draw-jank-cell-snapshot.md  draw-jank-fixes.md  drawpile-compositor-comparison.md  file-drop-dock-drag.md  flood-fill-wand-research.md  horizontal-dock-drag.md  krita-brush-resize-stabilizer.md  krita-brush-spacing-reference.md  krita-color-mix-reference.md  krita-plugin-architecture.md  krita-round-brush-reference.md  krita-stabilizer-reference.md  krita-transform-reference.md  large-brush-dimming-fix.md  large-brush-profile-2026-06-04.md  large-brush-size-performance.md  large-brush-square-mask.md  large-canvas-draw-jank.md  large-canvas-stroke-perf.md  large-stamp-cached-raster.md  layer-mask-csp.md  layer-panel-select-drag-fix.md  live-profile-2026-06-05.md  live-stroke-display.md  node-graph-raster-paths.md  (+28 more)
packaging/ci/: bootstrap.sh  check-deps.sh  debian-bookworm.packages  pack-all.sh  verify-pack.sh
packaging/flatpak/: build.sh  com.flosspaint.Floss.desktop  com.flosspaint.Floss.metainfo.xml  com.flosspaint.Floss.yml  floss-launcher.sh
packaging/gumroad/: README.md  landing.html  product-description.html
packaging/linux/: application-x-floss.xml  floss-thumbnailer  floss.desktop.in  floss.thumbnailer  install-file-associations.sh
packaging/macos/: .env.signing.example  Info.plist  entitlements.plist  pack-dmg.sh  sign-and-notarize.sh
packaging/portable/: pack.sh
packaging/release/: .env.release.example  release.sh  setup-gitlab-ci.sh  sync-to-site.sh  upload-cdn.sh  upload-gumroad.sh
packaging/velopack/: README.md  pack.ps1  pack.sh
plugins/: Directory.Build.targets
plugins/Floss.AnimeMaskPlugin/: AnimeMaskCommands.cs  AnimeMaskPluginModule.cs  BaseColorMaskEngine.cs  Floss.AnimeMaskPlugin.csproj  Floss.AnimeMaskPlugin.floss-plugin.json
plugins/Floss.HelloPlugin/: Floss.HelloPlugin.csproj  Floss.HelloPlugin.floss-plugin.json  HelloPluginModule.cs
rust/: Cargo.toml
rust/src/: brush.rs  document.rs  frb_generated.rs  geometry.rs  layer.rs  lib.rs  stroke.rs  tile.rs
rust/src/api/: drawing.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_floss.podspec
rust_builder/linux/: CMakeLists.txt  rust_lib_floss_plugin.cc
rust_builder/linux/include/rust_lib_floss/: rust_lib_floss_plugin.h
rust_builder/macos/: rust_lib_floss.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: migrate-dock-panels.py
src/Floss.App/: AngleDynamicsPopupWindow.cs  App.axaml  App.axaml.cs  AppAssets.cs  AppColors.cs  AppConfig.cs  AppPaths.cs  BrushEditorWindow.cs  BrushStrokePreview.cs  BrushTipBrowserWindow.cs  CrashLog.cs  CrashReport.cs  FilterControls.cs  Floss.App.csproj  HsvColorPicker.cs  Icons.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  (+5 more)
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+567 files in other folders)
