[workspace]
resolver = "2"
members = [
    "crates/floss-core",
    "crates/floss-document",
    "crates/floss-brush",
    "crates/floss-compositor",
    "crates/floss-input",
    "crates/floss-tool",
    "crates/floss-file",
    "crates/floss-ui",
    "crates/floss-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Math / geometry
glam = { version = "0.29", features = ["bytemuck", "serde"] }

# Tablet input — TODO: find correct crate or use platform APIs
# octatablet = "0.3"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image codecs
image = "0.25"
psd = "0.3"

# Utilities
thiserror = "2"
parking_lot = "0.12"
tracing = "0.1"
smallvec = "1"
bytemuck = "1"

