[package]
name = "rust_lib_floss"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rust_lib_floss"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
