[package]
name = "floss-brush"
version.workspace = true
edition.workspace = true

[dependencies]
floss-core = { path = "../floss-core" }
floss-document = { path = "../floss-document" }
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
image.workspace = true
