[package]
name = "floss-tool"
version.workspace = true
edition.workspace = true

[dependencies]
floss-core = { path = "../floss-core" }
floss-document = { path = "../floss-document" }
floss-brush = { path = "../floss-brush" }
floss-input = { path = "../floss-input" }
glam.workspace = true
tracing.workspace = true
