[package]
name = "floss-composite"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Native BGRA compositing kernels for Floss (FFI)"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
csbindgen = "1.9.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 2
